# CMakeTest

./: .gitignore  .gitmodules  CMakeLists.txt  LegioConfig.h.in  build.bat  configure.bat
src/MyLib/: CMakeLists.txt  myLib.cpp  myLib.h
src/core/: main.cpp
